--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    Austin J built the My Pet Cow app as
+                    Austin J built this app as
                     an Ad Supported app. This SERVICE is provided by
                     Austin J at no cost and is intended for
                     use as is.
@@ -27,8 +27,7 @@
                     Policy.
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
-                    as in our Terms and Conditions, which is accessible at
-                    My Pet Cow unless otherwise defined in this Privacy
+                    as in our Terms and Conditions, which is accessible on app unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
